# EdgeAI

./: .gitignore  README.md  venvActivation.txt
GNN/: GNN.ipynb
GestureRecognition/: EdgeImpulse.ipynb
GestureRecognition/.metadata/: .log4j2.xml  version.ini
GestureRecognition/.metadata/.plugins/org.eclipse.cdt.core/: STM32F407-OS.language.settings.xml
GestureRecognition/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
GestureRecognition/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
GestureRecognition/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
GestureRecognition/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
GestureRecognition/.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
GestureRecognition/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
GestureRecognition/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
GestureRecognition/DaFo/: CMakeLists.txt  custom_targets.json  main.cpp
GestureRecognition/DaFo/TARGET_DISCO_F407VG_IOT01A/: CMakeLists.txt  cmsis.h  device.h  mbed_rtx.h
GestureRecognition/STM32F407-OS/: .cproject  .mxproject  .project  STM32F407-OS Debug.launch  STM32F407-OS.ioc  STM32F407-OS.txt
GestureRecognition/STM32F407-OS/Debug/: STM32F407-OS.elf  STM32F407-OS.list  STM32F407-OS.map  makefile  objects.list  sources.mk
GestureRecognition/mbed-os-imaginary-port/: CMakeLists.txt  custom_targets.json  main.cpp
GestureRecognition/mbed-os-imaginary-port/TARGET_IMAGINARYBOARD/: CMakeLists.txt
(+141 files in other folders)
